# Low-Level

./: .gitignore  CMakeLists.txt  README.md.txt  SinistarSpriteSheet.psd
Sinistar/: Sinistar.vcxproj
src/: license.txt  main.cpp  main.h  readme.txt
src/Engine/: EngineCore.h  EngineDefaults.h  EngineDefaults.ini  TestClass.h  UI_Core.h
src/Engine/Core/: AudioManager.cpp  AudioManager.h  Collider.cpp  Collider.h  Component.cpp  Component.h  GameCamera.h  GameInstance.cpp  GameInstance.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Object.cpp  Object.h  ObjectPooler.h  RigidBody.h  Timer.h  Transform.cpp  Transform.h
src/Engine/Core/AI/: BehaviourBase.h  SteeringManager.cpp  SteeringManager.h
src/Engine/Core/Components/: Animator.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Engine/Core/Events/: Event.h
src/Engine/Core/Input/: ActionMapping.h  InputSystem.cpp  InputSystem.h
src/Engine/Core/Interface/: TeamGenerics.h
src/Engine/Core/Libs/: GameFunctionLib.cpp  GameFunctionLib.h  Maths.cpp  Maths.h  Physics.h
src/Engine/Core/UI/: UI_Base.cpp  UI_Base.h  UI_Element.cpp  UI_Element.h  UI_Text.cpp  UI_Text.h
src/Engine/Core/VFX/: Particle.cpp  Particle.h
src/Engine/MathLib/: Maths.cpp  Maths.h
src/Engine/Public/: Component.h  GameObject.h  RigidBody.h  Transform.h
src/Game/: main.cpp  main.h
src/Game/Assets/: AudioSourceList
src/Game/Boss/: SinPiece.h
src/Game/Components/: HealthComponent.cpp  HealthComponent.h
src/Game/Enemies/: AI_Manager.cpp  AI_Manager.h  BasicEnemy.cpp  BasicEnemy.h  Boss.cpp  Boss.h  CollectorEnemy.cpp  CollectorEnemy.h  FiringEnemy.cpp  FiringEnemy.h
src/Game/Misc/: Asteroid.cpp  Asteroid.h  AsteroidManager.cpp  AsteroidManager.h
src/Game/Pickups/: Crystal.cpp  Crystal.h
src/Game/Player/: PlayerCharacter.cpp  PlayerCharacter.h
src/Game/Projectiles/: Projectile.cpp  Projectile.h  Sinibomb.cpp  Sinibomb.h
src/Game/Scenes/: GameLevel.cpp  GameLevel.h  GameOver.h  MainMenu.cpp  MainMenu.h
src/Game/UI/: UI_GameOver.cpp  UI_GameOver.h  UI_HUD.cpp  UI_HUD.h  UI_LostLife.cpp  UI_LostLife.h  UI_MainMenu.cpp  UI_MainMenu.h  UI_PauseMenu.cpp  UI_PauseMenu.h  UI_Text.cpp  UI_Text.h
